Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87813

WASM: App sometimes crashes on aborting NetworkRequest

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.3, 5.15.6, 6.2.0 Alpha
    • 5.15.1
    • Network: HTTP
    • None
    • Windows 10 / Qt 5.15.1 / emsdk 1.39.8
      Chrome Version 86.0.4240.111 (Offizieller Build) (64-Bit)
      Firefox 82.0
    • WebAssembly
    • 75b0e8d59999d91f1828e464166f6ad829d74d7b (qt/qtbase/dev) b3676ddd0a541decf193abb6605b20d93c07f7f9 (qt/tqtc-qtbase/5.15)

      The attached example app crashes on aborting the running network request.
      It does not always happen on the first try though, if you keep pushing "Go", wait for the request to abort and hit "Go" again eventually the app will crash in different ways.

      Maybe related to: QTBUG-83728

        1. ExampleProject.zip
          3 kB
          Marscho
        2. Console-Chrome.PNG
          243 kB
          Marscho
        3. Console-Firefox.PNG
          110 kB
          Marscho
        For Gerrit Dashboard: QTBUG-87813
        # Subject Branch Project Status CR V

            lpotter Lorn Potter
            Marscho Marscho
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes