wasm: fix network crash

Fixes: QTBUG-87813
Pick-to: 5.15
Change-Id: Ie9b8a29037eb150c23741683588b0f0bfd5d8c63